--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://alayza14.github.io/app-ads-txt/">
-  <link rel="canonical" href="https://alayza14.github.io/app-ads-txt/">
+  <meta http-equiv="refresh" content="0; url=https://alayza14.github.io/app-ads-txt">
+  <link rel="canonical" href="https://alayza14.github.io/app-ads-txt">
 </head>
 <body>
 </body>
 </html>
+
