--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
 <head>
+  <!-- Redirigir desde https://alayza14.github.io/app-ads.txt (sin barra final) a https://alayza14.github.io/app-ads-txt/ (con barra final) -->
   <meta http-equiv="refresh" content="0; url=https://alayza14.github.io/app-ads-txt/">
+  <!-- URL correcta para los motores de búsqueda y AdMob -->
   <link rel="canonical" href="https://alayza14.github.io/app-ads-txt/">
 </head>
 <body>
 </body>
 </html>
+
