--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-  <!-- Redirigir desde https://alayza14.github.io/app-ads.txt (sin barra final) a https://alayza14.github.io/app-ads-txt/ (con barra final) -->
-  <meta http-equiv="refresh" content="0; url=https://alayza14.github.io/app-ads-txt/">
-  <!-- URL correcta para los motores de búsqueda y AdMob -->
-  <link rel="canonical" href="https://alayza14.github.io/app-ads-txt/">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirigiendo...</title>
+    <!-- Redirigir automáticamente de la URL incorrecta a la URL correcta -->
+    <meta http-equiv="refresh" content="0; url=https://alayza14.github.io/app-ads-txt/">
+    <!-- URL correcta para los motores de búsqueda y AdMob -->
+    <link rel="canonical" href="https://alayza14.github.io/app-ads-txt/">
 </head>
 <body>
+    <p>Redirigiendo...</p>
 </body>
 </html>
+
 
